add recipe-viewer to landing page

--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
         <p>A page with a button that calls a serverless API endpoint.</p>
         <span class="tag">API</span>
       </a>
+
+      <a href="/recipe-viewer" class="tool-card">
+        <h2>Recipe Viewer</h2>
+        <p>Extract and display recipes from any URL in a clean, distraction-free format.</p>
+        <span class="tag">API</span>
+      </a>
     </div>
 
     <footer>
